Icon hover states.

--- a/styles/About.module.sass
+++ b/styles/About.module.sass
@@ -28,6 +28,9 @@ $blockTransTime: 1.5s
   & a
     height: 2em
     align-self: flex-start
+    &:hover svg
+      color: $info
+
   & details
     flex: 1 0
     & summary
