Fixing glitchy placement of video overlay icon.

--- a/styles/RecordingThumb.module.scss
+++ b/styles/RecordingThumb.module.scss
@@ -9,10 +9,15 @@
   }
 }
 
+.resultItem a {
+  display: block;
+}
+
 .videoIcon {
+  display: inline-block;
   position: relative;
-  top: 60px;
   left: -120px;
+  top: -90px;
 }
 
 .videoIconLayer {
