--- a/styles/About.module.sass
+++ b/styles/About.module.sass
@@ -5,7 +5,7 @@ $blockTransTime: 1.5s
   display: flex
   flex-direction: column
   align-items: center
-  background-color: #dbdbdb
+  background-color: $cyan
   padding: 0 0
   @media screen and (min-width: $desktop)
     padding: 0 2vw
