--- a/styles/ResultBlock.module.scss
+++ b/styles/ResultBlock.module.scss
@@ -1,5 +1,5 @@
-@import 'initial-variables.sass';
-@import 'sortDialog.sass';
+@import 'initial-variables';
+@import 'sortDialog';
 
 .block {
   background-color: white;
