--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -1,4 +1,4 @@
-@import 'initial-variables.sass';
+@import 'initial-variables';
 
 .container {
   min-height: calc(100vh - #{$footer-height});
@@ -120,7 +120,6 @@
   justify-content: center;
   align-items: center;
   flex-grow: 1;
-  text-decoration: revert;
 }
 
 .footer span {
