--- a/styles/initial-variables.sass
+++ b/styles/initial-variables.sass
@@ -4,12 +4,13 @@ $black:        hsl(0, 0%, 4%) !default
 $black-bis:    hsl(0, 0%, 7%) !default
 $black-ter:    hsl(0, 0%, 14%) !default
 
-$grey-darker:  hsl(0, 0%, 21%) !default
-$grey-dark:    hsl(0, 0%, 29%) !default
-$grey:         hsl(0, 0%, 48%) !default
-$grey-light:   hsl(0, 0%, 71%) !default
-$grey-lighter: hsl(0, 0%, 86%) !default
-$grey-lightest: hsl(0, 0%, 93%) !default
+$grey-darker:     hsl(0, 0%, 21%) !default
+$grey-dark:       hsl(0, 0%, 29%) !default
+$grey:            hsl(0, 0%, 48%) !default
+$grey-light:      hsl(0, 0%, 71%) !default
+$grey-lighter:    hsl(0, 0%, 86%) !default
+$grey-lighter-er: hsl(0, 0%, 91%) !default
+$grey-lightest:   hsl(0, 0%, 93%) !default
 
 $white-ter:    hsl(0, 0%, 96%) !default
 $white-bis:    hsl(0, 0%, 98%) !default
