--- a/styles/sortDialog.sass
+++ b/styles/sortDialog.sass
@@ -6,13 +6,14 @@
 
 .sortMenu
   position: absolute
-  right: 0px
   background-color: white
   border: solid thin $info
   border-radius: .5em
   padding: .3em .5em
   font-size: 1.2em
   white-space: nowrap
+  &.right
+    right: 0px
 
 .sortChoice
   cursor: pointer
