--- a/styles/FilterConfig.module.scss
+++ b/styles/FilterConfig.module.scss
@@ -1,43 +1,35 @@
 @import 'initial-variables';
 
 .container {
-  background-color: white;
-  min-width: 12em;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding-inline-start: unset;
-}
-
-.row {
-  width: 50%;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
-  align-items: center;
-}
-
-.abbrev {
-  min-width: 2ch;
+  background-color: $white-ter;
+  font-size: 0.85rem;
   text-align: center;
+  text-align: -moz-center;
+  text-align: -webkit-center;
+}
+
+.hidden {
+  display: none;
+}
+
+.list {
+  margin: 0 1em;
+  width: fit-content;
+  display: flex;
+  flex-flow: row wrap;
+}
+
+.listitem {
+  width: 5ch;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
 }
 
 .cb {
-  min-width: 2ch;
-  font-size: unset;
-}
-
-.message {
-  text-align: center;
-}
-
-.link {
-  cursor: pointer;
+  cursor: inherit;
 }
 
 .footer {
   margin-top: 1em;
-  text-align: center;
-  font-size: small;
-  min-height: 4em;
 }
