Improving display of country codes. Using monospace font defined in sass var. Distinct style rules for 'All' checkbox. Centering country check box layout (odd count has staggered "columns")

--- a/styles/About.module.sass
+++ b/styles/About.module.sass
@@ -49,7 +49,7 @@ $blockTransTime: 1.5s
   &::-webkit-scrollbar-track
     background: $grey-lighter
   & dt
-    font-family: monospace
+    font-family: $font-families-mono
     color: $cyan
 
 .deployRow
@@ -157,7 +157,7 @@ $blockTransTime: 1.5s
   background-color: $grey-lighter
   border-radius: 1em
   position: relative
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace
+  font-family: $font-families-mono
   min-height: 10rem
   max-height: 10rem
   overflow-x: hidden
