--- a/styles/initial-variables.sass
+++ b/styles/initial-variables.sass
@@ -70,3 +70,5 @@ $fullhd-enabled: true !default
 
 $left-right-padding-tablet: 0.75rem
 $footer-height: 1.5rem
+
+$font-families-mono: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace
