Compressing monospace text. Track length for space. About code same to emphasize decoration not legibility.

--- a/styles/About.module.sass
+++ b/styles/About.module.sass
@@ -158,6 +158,8 @@ $blockTransTime: 1.5s
   border-radius: 1em
   position: relative
   font-family: $font-families-mono
+  letter-spacing: -.1em
+  line-height: 1.2
   min-height: 10rem
   max-height: 10rem
   overflow-x: hidden
