ARAI improvments. Label for about. Skip-to-content for screen readers. Result items tab-focusable and activated with enter/space key.

--- a/styles/About.module.sass
+++ b/styles/About.module.sass
@@ -19,6 +19,10 @@ $blockTransTime: 1.5s
       width: 80%
       padding: .5em 2.5em 2.5em 2.5em
 
+.screenReader
+  position: absolute
+  top: -10000px
+  
 .header
   display: flex
   justify-content: space-between
